# openalgo-python-library

./: .gitignore  LICENSE  PKG-INFO  RALPH_PLAN.md  README.md  RUST_MIGRATION_TRACKER.csv  pyproject.toml  setup.py
.github/workflows/: CI.yml
benchmark/: FULL_BENCHMARK.md  TALIB_PERF_COMPARE.md  fetch_data.py  full_bench.py  hybrid_parity.py  momentum_parity.py  oscillator_parity.py  statistics_parity.py  talib_extra_parity.py  volume_parity.py
docs/: INDICATORS_QUICK_REFERENCE.md  PARAMETERS_REFERENCE.md  TALIB_COMPATIBILITY.md  TECHNICAL_INDICATORS_GUIDE.md  TRADING_STRATEGIES_EXAMPLES.md  python_sdk.md
examples/: indicators_examples.py  options_examples.py
openalgo/: __init__.py  data.py  feed.py  numba_shim.py  options.py
openalgo/indicators/: __init__.py  _backend.py  hybrid.py  momentum.py  oscillators.py  statistics.py  talib_extra.py  utils.py  volume.py
rust/: Cargo.toml
rust/oa_core/: Cargo.toml
rust/oa_core/src/: lib.rs
rust/oa_py/src/: lib.rs
